test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics --no-experimental const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library std (sway-lib-std)
DIFF------------------------------
.program:
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
error
 --> test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics/src/main.sw:7:15
  |
5 | }
6 | 
7 | impl<T, const N: u64> A for [T; N] {
  |               ^ This needs "const_generics" to be enabled, but it is currently disabled. For more details go to https://github.com/FuelLabs/sway/issues/6860.
8 |     #[allow(dead_code)]
9 |     fn f(self) -> u64 {
  |
____

  Aborting due to 1 error.
error: Failed to compile const_generics

> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics
   Compiling library std (sway-lib-std)
DIFF------------------------------
.program:
   Compiling script const_generics (test/src/e2e_vm_tests/test_programs/should_fail/language/const_generics)
DIFF------------------------------
.program:
DIFF------------------------------
.program:
.0                                      ; --- start of function: __entry ---
move $$locbase $sp                      ; [entry init: __entry]: set locals base register
cfei i0                                 ; [entry init: __entry]: allocate: locals 0 byte(s), call args 0 slot(s)
.4
fncall .2                               ; [call: main_0]: call function
 move $r1 $zero                          ; [call: main_0]: copy returned unit value
 movi $r1 i0                             ; [call: main_0]: copy returned unit value
retd $zero $zero                        ; [entry end: __entry] return slice
DIFF------------------------------
.program:
.2                                      ; --- start of function: main_0 ---
pusha .2                                ; [fn init: main_0]: push all used registers to stack
move $$locbase $sp                      ; [fn init: main_0]: set locals base register
cfei i0                                 ; [fn init: main_0]: allocate: locals 0 byte(s), call args 0 slot(s)
.5
ji  .3
.3
cfsi i0                                 ; [fn end: main_0] free: locals 0 byte(s), call args 0 slot(s)
popa .2                                 ; [fn end: main_0] restore all used registers
jal $zero $$reta i0                     ; [fn end: main_0] return from call
    Finished debug [unoptimized + fuel] target(s) [56 B] in ???
